# CSUGLOBAL_CSC450

./: .gitignore  ReadMe.md
CriticalThinking1/: CMakeLists.txt  critical_thinking_1.md
CriticalThinking1/src/CSC450_CT1/: CMakeLists.txt  CSC450_CT1_mod1_1.cpp  CSC450_CT1_mod1_2.cpp  CSC450_CT1_person.cpp  critical_thinking_1.cpp  critical_thinking_1.h  license-form.zil
CriticalThinking2/: CMakeLists.txt  CSC450_CT2_string.cpp  critical_thinking_2.md
CriticalThinking3/: CMakeLists.txt  CSC450_CT3_integer_pointers.cpp  critical_thinking_3.md
CriticalThinking5/: CMakeLists.txt  CSC450_CT5_append_reverse.cpp  CSC450_CT5_mod5.txt  critical_thinking_5.md
Discussion1/src/: Car.java  car.cpp  overflow.cpp
Discussion2/: CMakeLists.txt  money.cpp
Discussion3/: CMakeLists.txt  LuckyNumbers.cpp  arrayPointers.cpp  regex_pattern.docx
Discussion4/: CMakeLists.txt  fmtExample.cpp  get_integer.cpp  student_examples.cpp  validate_integer.cpp  validate_integer_parser.cpp
Discussion5/: AtomicVariables.cpp  CMakeLists.txt  ConcurrentExecutor.java  Mutex.java  OrderProcess.cpp  SynchronizedExample.java
Discussion6/src/: VulnerableLog4jExampleHandler.java
Discussion7/: Scope.html  ScopeExample.html
Discussion7/src/: Scope.java  ScopeExample.java  ScopeMethod.java
Discussion8/: GradeCalculator.html
Discussion8/src/: GradeCalculator.java
PortfolioProject/: portfolio_project.md
PortfolioProject/src/: Count.java  TwentyTwenty.java
PortfolioProjectMilestone/: CMakeLists.txt  Count.cpp  Count.h  StaticCount.h  portfolio_project_milestone.md
(+4 files in other folders)
