cmake_minimum_required(VERSION 3.25)
project(CriticalThinking1)

set(CMAKE_CXX_STANDARD 23)

add_executable(CriticalThinking1 src/CSC450_CT1/critical_thinking_1.cpp src/CSC450_CT1/critical_thinking_1.h src/CSC450_CT1/CSC450_CT1_mod1_1.cpp src/CSC450_CT1/CSC450_CT1_mod1_2.cpp src/CSC450_CT1/CSC450_CT1_person.cpp)
